# nostosdb-server

./: AGENTS.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  PREVIEW.md  README.md  SECURITY.md  compose.yaml
.github/workflows/: attest-candidate.yml  ci.yml
client/: Cargo.toml
client/src/: lib.rs
distribution/: README.md  release-manifest.json
distribution/homebrew/Formula/: nostdb.rb.in  nostosdb.rb.in
distribution/scripts/: common.py  stage_npm_candidate.py  verify_local_npm.py
distribution/systemd/: README.md  nostdb.service
distribution/tests/: test_npm_distribution.py
distribution/windows/: install-service.ps1
docs/: DATABASE_PROTOCOL.md  DATABASE_SERVER.md  HTTP_API.md
npm/: README.md  package.json
npm/lib/: launcher.cjs  platform.cjs
npm/scripts/: verify-packages.cjs
npm/tests/: launcher.test.cjs  platform.test.cjs
src/: api.rs  catalog.rs  config.rs  daemon.rs  lib.rs  main.rs  protocol.rs  wire.rs
tests/: database_protocol.rs  distribution.rs  nostd_process.rs  server.rs
