[package]
name = "nostos-server"
description = "Single-node HTTP server for NostosDB"
edition = "2024"
license = "SSPL-1.0"
publish = false
rust-version = "1.85"
version = "0.1.0"

[dependencies]
axum = "0.8.9"
futures-util = "0.3.31"
nostos-engine = { path = "../nostos-core/crates/nostos-engine", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "~1.51", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.7.0", features = ["limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.24.0", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"
