[package]
name = "nostdb-client"
description = "Thin blocking client and wire contract for the NostDB database protocol"
edition = "2024"
license = "SSPL-1.0"
publish = false
rust-version = "1.85"
version = "0.0.3"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[lints.rust]
unsafe_code = "forbid"
